upload panel overflow fix in edge browser

--- a/data/css/core.css
+++ b/data/css/core.css
@@ -437,11 +437,11 @@ body.guest #timep.show ~ #rankp {
     font-size: 12px;
 }
 
-.fileupload-container {
+#uploadp .fileupload-container {
     overflow: hidden;
 }
 
-.fileupload-container #file_dropzone {
+#uploadp .fileupload-container #file_dropzone {
     position: absolute;
     display: flex;
     flex-direction: column;
@@ -460,37 +460,37 @@ body.guest #timep.show ~ #rankp {
     opacity: 1;
 }
 
-.fileupload-container #file_dropzone.drag {
+#uploadp .fileupload-container #file_dropzone.drag {
     background-color: #ccc;
     color: white;
 }
 
-.fileupload-container #file_dropzone.hide {
+#uploadp .fileupload-container #file_dropzone.hide {
     opacity: 0;
 }
 
-.fileupload-container #file_dropzone.hide+.info {
+#uploadp .fileupload-container #file_dropzone.hide+.info {
     opacity: 1;
 }
 
-.fileupload-container #file_dropzone #file_input {
+#uploadp .fileupload-container #file_dropzone #file_input {
     display: none;
 }
 
-.fileupload-container #file_dropzone .title {
+#uploadp .fileupload-container #file_dropzone .title {
     color: rgb(104, 104, 104);
     font-size: 16px;
     font-weight: bold;
     text-transform: uppercase;
 }
 
-.fileupload-container #file_dropzone .sub {
+#uploadp .fileupload-container #file_dropzone .sub {
     color: rgb(128, 128, 128);
     font-size: 12px;
     margin: 6px 0;
 }
 
-.fileupload-container .info {
+#uploadp .fileupload-container .info {
     position: absolute;
     width: 100%;
     height: 100%;
@@ -500,7 +500,7 @@ body.guest #timep.show ~ #rankp {
     opacity: 0;
 }
 
-.fileupload-container .info #file_upstate {
+#uploadp .fileupload-container .info #file_upstate {
     position: relative;
     display: block;
     padding: 0 0 2px 0;
@@ -513,7 +513,7 @@ body.guest #timep.show ~ #rankp {
     color: rgb(136, 136, 136);
 }
 
-.fileupload-container .info #file_name {
+#uploadp .fileupload-container .info #file_name {
     position: relative;
     display: block;
     width: 100%;
@@ -524,7 +524,7 @@ body.guest #timep.show ~ #rankp {
     color: rgb(93, 93, 93);
 }
 
-.fileupload-container .info .bar {
+#uploadp .fileupload-container .info .bar {
     position: absolute;
     bottom: 24px;
     left: 50%;
@@ -534,7 +534,7 @@ body.guest #timep.show ~ #rankp {
     background-color: rgba(90, 90, 90, 0.2);
 }
 
-.fileupload-container .info .bar #file_bar {
+#uploadp .fileupload-container .info .bar #file_bar {
     position: absolute;
     top: 0;
     left: 0;
@@ -544,11 +544,11 @@ body.guest #timep.show ~ #rankp {
     transition: width 0.2s ease;
 }
 
-.fileupload-container .info .bar #file_bar.red {
+#uploadp .fileupload-container .info .bar #file_bar.red {
     background-color: #c0392b;
 }
 
-.fileupload-container .info .bar #file_perc {
+#uploadp .fileupload-container .info .bar #file_perc {
     position: absolute;
     top: 0;
     left: 0;
@@ -558,7 +558,7 @@ body.guest #timep.show ~ #rankp {
     color: rgba(116, 116, 116, 0.7);
 }
 
-.fileupload-container .info .bar #file_size {
+#uploadp .fileupload-container .info .bar #file_size {
     position: absolute;
     top: 0;
     right: 0;
